crates/htui-core/tests/snapshots/prompt_render__section_judge_candidate_1.snap
---
source: crates/htui-core/tests/prompt_render.rs
expression: "render::wrap(&render::judge_candidate(candidate, false))"
---
<section name="judge_candidate:1" fanout_index="1" verify="fail" exit_code="101">
<document kind="impl" version="1">
Flushed from the drop handler.
</document>
<diff range="aaa1111..ccc3333">
 1 file changed, 22 insertions(+), 1 deletion(-)

```
--- a/record.rs
+++ b/record.rs
+impl Drop for Recorder {}
```
</diff>
<verification>
```
test recorder::flushes ... FAILED
test result: FAILED. 40 passed; 1 failed
```
</verification>
</section>
