crates/htui-core/tests/snapshots/prompt_render__section_judge_candidate_2.snap
---
source: crates/htui-core/tests/prompt_render.rs
expression: "render::wrap(&render::judge_candidate(candidate, false))"
---
<section name="judge_candidate:2" fanout_index="2">
<diff range="aaa1111..ddd4444">
 3 files changed, 140 insertions(+), 6 deletions(-)

```
--- a/record.rs
+++ b/record.rs
+// a rewrite
```
</diff>
</section>
