crates/htui-core/tests/snapshots/prompt_render__section_judge_task.snap
---
source: crates/htui-core/tests/prompt_render.rs
expression: "render::wrap(&render::judge_task(&judge.task))"
---
<section name="judge_task">
You are running the `implement` phase for htui:MOD-2, attempt 1.
</section>
