crates/htui-core/tests/snapshots/prompt_render__section_skills.snap
---
source: crates/htui-core/tests/prompt_render.rs
expression: rendered
---
<section name="skills">
<skill name="rust-style" version="2">
Prefer `expect` with a reason over `unwrap`.
No `unsafe`.
</skill>
</section>
